# ddbot-desktop

./: .gitignore  readme.md
DDBOT-WSa-Desktop/: PROJECT_STATUS.md  README.md  WEBUI_README.md  index.html  package-lock.json  package.json  test-api.html  tsconfig.json  vite.config.ts
DDBOT-WSa-Desktop/backend/: Cargo.toml
DDBOT-WSa-Desktop/backend-js/: index.js  package-lock.json  package.json
DDBOT-WSa-Desktop/backend/src/: main.rs
DDBOT-WSa-Desktop/scripts/: install-service.ps1  uninstall-service.ps1
DDBOT-WSa-Desktop/service/: ddbot-webui-windows.xml  ddbot-webui.service
DDBOT-WSa-Desktop/src/: App.vue  style.css
DDBOT-WSa-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
DDBOT-WSa-Desktop/src-tauri/src/: ddbot.rs  lib.rs  main.rs  process.rs
DDBOT-WSa-Desktop/src/api/: tauri.ts
DDBOT-WSa-Desktop/src/components/: Button.vue  Input.vue  InputNumber.vue  NavigationPage.vue  Option.vue  ProgressBar.vue  Select.vue  StatusCard.vue  Toggle.vue
DDBOT-WSa-Desktop/src/pages/: ConfigEditor.vue  GraphicalConfigEditor.vue  HomePage.vue  LogViewer.vue  Login.vue  LogsPage.vue  SettingsPage.vue  SetupWizard.vue  SubscriptionManager.vue  TemplateCenter.vue  TestPage.vue
DDBOT-WSa-Desktop/src/router/: index.ts
DDBOT-WSa-Desktop/src/stores/: app.ts
