[package]
name = "ddbot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
lazy_static = "1.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4.43"
