[package]
name = "ddbot-wsa-desktop"
version = "0.1.0"
description = "DDBOT-WSa Desktop"
authors = ["DDBOT-WSa"]
edition = "2024"

[lib]
name = "ddbot_wsa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
log = "0.4.29"
log4rs = "1.4.0"
env_logger = "0.11.6"
dirs = "6.0.0"
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["json", "rustls", "gzip", "brotli", "deflate"] }
regex = "1.12.3"
zip = "2.2.2"
tar = "0.4.44"
flate2 = "1.1.9"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
